--- a/_posts/2014-07-13-project-6.markdown
+++ b/_posts/2014-07-13-project-6.markdown
@@ -4,8 +4,8 @@ subtitle: 24 Hour Hackathon
 layout: default
 modal-id: 6
 date: 2014-07-15
-img: roundicons.png
-thumbnail: roundicons-thumbnail.png
+img: adventMain.png
+thumbnail: adventThumb.png
 alt: image-alt
 project-date: April 2014
 client: Start Bootstrap
