--- a/_posts/2014-07-18-project-1.markdown
+++ b/_posts/2014-07-18-project-1.markdown
@@ -4,8 +4,8 @@ subtitle: JavaScript Maths Game
 layout: default
 modal-id: 1
 date: 2014-07-18
-img: dreams.png
-thumbnail: dreams-thumbnail.png
+img: gridlockedMain.png
+thumbnail: gridlockedThumb.png
 alt: image-alt
 project-date: October 2015
 client: Start Bootstrap
