Changed around project 4 & 6 to look correct once deployed

--- a/_posts/2014-07-13-project-6.markdown
+++ b/_posts/2014-07-13-project-6.markdown
@@ -1,11 +1,11 @@
 ---
-title: Home
-subtitle: 24 Hour Hackathon
+title: Hometown
+subtitle: Share your local knowledge with others
 layout: default
 modal-id: 6
 date: 2014-07-15
-img: adventMain.png
-thumbnail: adventThumb.png
+img: hometownMain.png
+thumbnail: hometownThumb.png
 alt: image-alt
 project-date: April 2014
 client: Start Bootstrap
