--- a/_posts/2014-07-16-project-3.markdown
+++ b/_posts/2014-07-16-project-3.markdown
@@ -7,9 +7,10 @@ date: 2014-07-16
 img: unicornMain.png
 thumbnail: unicornThumb.png
 alt: image-alt
-project-date: April 2014
+project-date: November 2015
 client: Start Bootstrap
 category: Web Development
-description: Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.
+description: This was our group project and is a web-based app that allows users to find unique startups and workspaces in and around London. Using Google APIs, the user can search for places with the help of autocomplete and the results are then displayed on the map. By clicking on one of these, more information, such as website and contact details will be shown. It has a RESTful API in Node and Express.
+technology: HTML5, CSS3, Node JS, Express, JavaScript, jQuery and Materialize.
 
 ---
