--- a/_posts/2014-07-13-project-6.markdown
+++ b/_posts/2014-07-13-project-6.markdown
@@ -9,6 +9,8 @@ thumbnail: hometownThumb.png
 alt: image-alt
 project-date: December 2015
 client: Start Bootstrap
+code: https://github.com/adjknowles/WDI-Project-4
+website: 
 category: Web Development
 description: This was my final project and is a web-based app that allows users to share their local knowledge about their hometown. Initially I created the back-end API and ran tests in the mongo database and Insomnia. I then focused on the front-end, implementing the Google APIs and creating the partial view pages. After this I concentrated on the styling, using Bootstrap as the front-end CSS framework as well as custom CSS.
 technology: HTML5, CSS3, Node JS, Express, Angular JS, MongoDB and Bootstrap.
