--- a/_posts/2014-07-14-project-5.markdown
+++ b/_posts/2014-07-14-project-5.markdown
@@ -4,12 +4,13 @@ subtitle: Contact me to find out!
 layout: default
 modal-id: 5
 date: 2014-07-14
-img: startup-framework.png
-thumbnail: startup-framework-thumbnail.png
+img: questionMain.png
+thumbnail: questionThumb.png
 alt: image-alt
-project-date: April 2014
+project-date: TBA
+technology: TBA
 client: Start Bootstrap
 category: Web Development
-description: Lorem ipsum dolor sit amet, usu cu alterum nominavi lobortis. At duo novum diceret. Tantas apeirian vix et, usu sanctus postulant inciderint ut, populo diceret necessitatibus in vim. Cu eum dicam feugiat noluisse.
+description: If you would like a Web Developer to join your team, or to help with your next project, please get in touch!
 
 ---
